Added links to footer

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,12 +12,15 @@
       %small
         ©
         %a{:href => "/about"} Ben Schwarz
-        2009—
-    /  
+        2009—  
       %nav
         %ul
           %li
             %a{:href => "/"} Home
           %li
             %a{:href => "/about", :rel => "author"} About
+          %li
+            %a{:href => "http://twitter.com/benschwarz", :rel => "external"} Twitter
+          %li
+            %a{:href => "http://github.com/benschwarz", :rel => "external"} Github
   = include_javascripts :global
