--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -3,7 +3,7 @@
   %hgroup
     %h1 I’m Ben Schwarz
     %img{:src => "/images/me.jpg"}
-    %h2 I love the web, typography and minimal design techniques. <br>I wrote something down that filled this space, can't find it now.
+    %h2 I love the web, typography and minimal design techniques. I wrote something down that filled this space, can't find it now.
 %section#bio
   %p Ben Schwarz is a well known Melbourne Rubyist who funds his love of good food (at home) and sake (in bars) by designing sophisticated web applications using standards based technology. More than anything else, he is driven by a maniacal desire to produce not only elegant code, but also beautiful software in the hands of its&nbsp;users.
 
@@ -13,4 +13,4 @@
     %p Every facet of my professional practice encompasses “humane design”, whether it be architecture, storyboarding or code. Currently, I manage projects using something like agile and lean mixed together. Most development work is conducted using BDD and/or TDD, depending on the flavour of&nbsp;project.
 
   %section#colophon
-    %p Colophon: In part, you can read about HOW THIS SITE CAME TO BE in my opening post.
+    %p Colophon: In part, you can read about how this site was designed and built in my opening post.
