--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:charset => "utf-8"}
     %title Ben Schwarz's site
-    = include_stylesheets :global
+    %link{:rel => "stylesheet", :href => "/stylesheets/application.css"}
     
     = csrf_meta_tag
   %body{:id => params[:action]}
@@ -23,4 +23,4 @@
             %a{:href => "http://twitter.com/benschwarz", :rel => "external"} Twitter
           %li
             %a{:href => "http://github.com/benschwarz", :rel => "external"} Github
-  = include_javascripts :global
+  = include_javascripts "modernizr"
