Corrected javascript include tag

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,4 +23,4 @@
             %a{:href => "http://twitter.com/benschwarz", :rel => "external"} Twitter
           %li
             %a{:href => "http://github.com/benschwarz", :rel => "external"} Github
-  = include_javascripts "modernizr"
+  = javascript_link_tag "modernizr"
