Can't fail with a real tag

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,4 +23,4 @@
             %a{:href => "http://twitter.com/benschwarz", :rel => "external"} Twitter
           %li
             %a{:href => "http://github.com/benschwarz", :rel => "external"} Github
-  = javascript_link_tag "modernizr"
+  %script{:src => "/javascripts/modernizr.js"}
