Added details to bio screen

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -9,8 +9,10 @@
 
 %aside
   %section#professional-process
-    %h1 Professional process
-    %p Every facet of my professional practice encompasses “humane design”, whether it be architecture, storyboarding or code. Currently, I manage projects using something like agile and lean mixed together. Most development work is conducted using BDD and/or TDD, depending on the flavour of&nbsp;project.
-
+    %h1 Professional Practice
+    %p Every facet of my professional practice encompasses “humane design”, whether it be architecture, storyboarding or code. Currently, I manage projects using something like agile and lean mixed together. Development work is conducted using test driven development.
+    %p I have a particular sense of detail that when applied using minimal design techniques creates beautiful, effective results.
+    %p If you're interested in engaging me for a project, to speak at an event or coach your team, get in touch.
+    %a{:href => "mailto:#{entity_encode('ben.schwarz@gmail.com')}"} E-Mail Ben
   %section#colophon
     %p Colophon: In part, you can read about how this site was designed and built in my opening post.
