--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -19,4 +19,5 @@
         2010
       %h1 Stop writing plans
     %h2 We all have great ideas, but to be fair to our craft, sometimes we have to forget them.
-  %p I’m often surprised when a client or co-worker decides to record the plans made during a feature design session when it has been decided that the feature won’t be completed during the next iteration. Seen someone take a photo of the whiteboard? How many times have you actually ever referenced those whiteboard photos?
+  %p I’m often surprised when a client or co-worker decides to record the plans made during a feature design session when it has been decided that the feature won’t be completed during the next&nbsp;iteration. Seen someone take a photo of the whiteboard? How many times have you actually ever referenced those whiteboard photos?
+  %a.continue-reading{:href => "/articles/article-title"} Continue Reading
