--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -36,7 +36,7 @@ body { font-size: 62.5%; text-rendering: optimizeLegibility; line-height: 1.5; m
 	-webkit-transition-timing-function: ease-in;
 	
 	&:hover{
-		background-color: black;
+		background-color: #5a9b2d;
 		color: white;
 	}
 }
@@ -50,7 +50,7 @@ body { font-size: 62.5%; text-rendering: optimizeLegibility; line-height: 1.5; m
 	position: absolute;
 	width: 3em;
 	display: block;
-	font-size: 1.2em;
+	font-size: 1em;
 	color: white;
 	font-family: Helvetica, Arial;
 	font-weight: bold;
@@ -67,9 +67,9 @@ body { font-size: 62.5%; text-rendering: optimizeLegibility; line-height: 1.5; m
 }
 
 body#home {
-	> article:first-child { margin-top: 0em; }
-	> article:last-of-type { border: 0; }
-  > article {
+	article:first-child { margin-top: 0em; }
+	article:last-of-type { border: 0; }
+  article {
 		@include clearfix;
 		margin-top: 2em;
 		padding-left: 0.2em;
@@ -120,7 +120,8 @@ body#about {
 		hgroup { overflow: auto; }
 		h1 { @include primary_header; @include column(6); }
 		h2 { @include secondry_header; @include alternate_column(2); clear: left; margin-top: 1em; }
-		h3 { @include flag; margin: 0.6em 0 0 -2.25em; padding: 0.5em 0.4em 0.5em 0.25em; font-size: 2.5em; width: auto; }
+		h3 { @include flag; margin: 0.4em 0 0 -2.25em; padding: 0.5em 0.4em 0.5em 0.25em; font-size: 2.5em; width: auto; }
+		img { margin-left: 20px; } /* Makes up for the h1 column losing its margin */
 	}
 	section#bio {
 		@include clearfix; 
@@ -142,6 +143,7 @@ body#about {
 
 			h1 { @include thirdly_header; } 
 			p { @include body_copy; width: auto; margin-top: 1em; }
+			a[href^="mailto"] { @include button; display: inline-block; float: right; }
 		}
 		section#colophon { 
 			@include alternate_column(1);
