Got my little mission statement in

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -3,7 +3,7 @@
   %hgroup
     %h1 I’m Ben Schwarz
     %img{:src => "/images/me.jpg"}
-    %h2 I love the web, typography and minimal design techniques. I wrote something down that filled this space, can't find it now.
+    %h2 I love minimal, functional design and development techniques, typography and all things web
 %section#bio
   %p Ben Schwarz is a well known Melbourne Rubyist who funds his love of good food (at home) and sake (in bars) by designing sophisticated web applications using standards based technology. More than anything else, he is driven by a maniacal desire to produce not only elegant code, but also beautiful software in the hands of its&nbsp;users.
 
