Working up new direction for site

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -5,14 +5,43 @@
     %img{:src => "/images/me.jpg"}
     %h2 I love minimal, functional design and development techniques, typography and all things web
 %section#bio
-  %p Ben Schwarz is a well known Melbourne Rubyist who funds his love of good food (at home) and sake (in bars) by designing sophisticated web applications using standards based technology. More than anything else, he is driven by a maniacal desire to produce not only elegant code, but also beautiful software in the hands of its&nbsp;users.
+  %p Ben Schwarz is a well known Melbourne based developer who funds his love of good food (at home) and sake (in bars) by designing sophisticated web applications using standards based technology. More than anything else, he is driven by a maniacal desire to produce not only elegant code, but also beautiful software in the hands of its&nbsp;users.
 
-%aside
-  %section#professional-process
-    %h1 Professional Practice
-    %p Every facet of my professional practice encompasses “humane design”, whether it be architecture, storyboarding or code. Currently, I manage projects using something like agile and lean mixed together. Development work is conducted using test driven development.
-    %p I have a particular sense of detail that when applied using minimal design techniques creates beautiful, effective results.
-    %p If you're interested in engaging me for a project, to speak at an event or coach your team, get in touch.
-    %a{:href => "mailto:#{entity_encode('ben.schwarz@gmail.com')}"} E-Mail Ben
-  %section#colophon
-    %p Colophon: In part, you can read about how this site was designed and built in my opening post.
+%section#articles
+  %h1 An archive of articles
+  
+  %article
+    %h1 Moving towards readable specs
+    %p How design could save the W3C
+  %article
+    %h1 Moving towards readable specs
+    %p How design could save the W3C
+  %article
+    %h1 Moving towards readable specs
+    %p How design could save the W3C
+  %article
+    %h1 Moving towards readable specs
+    %p How design could save the W3C
+
+%section#presentations
+  %h1 Presentations
+  %dl
+    %dt 2010
+    %dd
+      %dl
+        %dt May
+        %dd Introducing "The hoard"
+        %dd Introducing "The hoard"
+    %dd
+      %dl
+        %dt April
+        %dd Introducing "The hoard"
+        %dd Introducing "The hoard"
+
+%section#meta
+  %h1 Meta
+  %p.contact
+    You have a lot of options to contact me, email is good, but I can often be found at web events around the world, hit me up if you’d like to catch up.
+  %a{:href => "mailto:#{entity_encode('ben.schwarz@gmail.com')}"} E-Mail Ben
+  %p.external
+    Apart from my personal work I also operate AB+C, alongside ANTHONY KOLBER. Together we build beautiful, professional looking web applications. Got something you want to get off the ground? Talk to us.
