--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -3,7 +3,7 @@
 @import 'css3';
 
 $background_colour: #F6F6F6; 
-$light_green: #7AC943;
+$light_green: #8EDD50;
 
 body { font-size: 62.5%; text-rendering: optimizeLegibility; line-height: 1.5; margin: 3em auto; width: 760px; background-color: $background_colour; }
 
@@ -66,67 +66,17 @@ body { font-size: 62.5%; text-rendering: optimizeLegibility; line-height: 1.5; m
 	&:after { content: '★'; visibility: hidden; height: 0; display: block; clear: both; }
 }
 
-body#home {
-	article:first-child { margin-top: 0em; }
-	article:last-of-type { border: 0; }
-  article {
-		@include clearfix;
-		margin-top: 2em;
-		padding-left: 0.2em;
-		border-bottom: 0.3em solid $light_green;
-		position: relative;
-
-    header {
-			overflow: auto;
-			a {
-			 	display: block; text-decoration: none;
-
-				time {
-					@include flag;
-					text-transform: uppercase;
-					span { font-size: 2em; line-height: 1em; }
-				}
-				
-				h1 {
-					width: 1em;
-					@include primary_header;
-					&:after { content: '—'; }
-				}
-				&:hover h1 { color: $light_green; }
-			}
-			
-			h2 { 
-				margin-top: 2em;
-				@include secondry_header; 
-				@include alternate_column(2);
-			}
-		}
-		p {
-			margin-top: 1.5em;
-			@include body_copy;
-			clear: left;
-		}
-		.csscolumns & p { 
-			width: auto;
-			@include column-count(2);
-			@include column-gap(1em);
-		}
-		a.continue-reading { @include button; float: right; margin: 1em 0; }
-  }
-}
-
 body#about {
 	header {
 		hgroup { overflow: auto; }
 		h1 { @include primary_header; @include column(6); }
-		h2 { @include secondry_header; @include alternate_column(2); clear: left; margin-top: 1em; }
+		h2 { @include secondry_header; clear: left; margin-top: 1em; }
 		h3 { @include flag; margin: 0.4em 0 0 -2.25em; padding: 0.5em 0.4em 0.5em 0.25em; font-size: 2.5em; width: auto; }
 		img { margin-left: 20px; } /* Makes up for the h1 column losing its margin */
 	}
 	section#bio {
 		@include clearfix; 
 		padding-bottom: 2em; 
-		border-bottom: 0.3em solid $light_green;
 		margin-bottom: 2em;
 		
 		p { @include body_copy; margin-top: 1em; }
@@ -136,34 +86,25 @@ body#about {
 			@include column-gap(1em);
 		}
 	}
-	aside {
-		overflow: auto;
-		section#professional-process {
-			@include alternate_column(2);
-
-			h1 { @include thirdly_header; } 
-			p { @include body_copy; width: auto; margin-top: 1em; }
-			a[href^="mailto"] { @include button; display: inline-block; float: right; }
-		}
-		section#colophon { 
-			@include alternate_column(1);
-
-			margin-top: 4.3em;
-			p { font-size: 1.2em; color: #898989; font-style: italic; }
-		}
+	section#meta {
+		p { @include body_copy; width: auto; margin-top: 1em; }
+		a[href^="mailto"] { @include button; display: inline-block; float: right; }
 	}
+	
 }
 
 body > footer { 
-	position: relative; clear: left; margin: 2em 0;
+	font-style: italic;
+	position: relative; clear: left; padding: 1em 0; border-top: 0.3em solid $light_green;
 	
-	small { color: #666; } 
+	small { color: #666; font-size: 1.2em; } 
 	small a { text-decoration: none; border-bottom: 1px solid #666; }
 	
 	nav {
 		position: absolute;
-		top: 0;
+		top: 1em;
 		right: 0;
+		font-size: 1.2em;
 		
 		ul li { display: inline; margin-right: 2em; color: #ababab; }
 		ul li a:visited { text-decoration: none; border-bottom: 1px dotted #bababa; }
