--- a/public/stylesheets/sass/typography.scss
+++ b/public/stylesheets/sass/typography.scss
@@ -15,29 +15,29 @@
 	color: #4D4D4D; 
 	line-height: 1em; 
 	font-size: 6.5em;
-	text-shadow: 1px 1px 0 $background_colour;
+	-webkit-font-smoothing: antialiased;
 }
 
 @mixin secondry_header {
-	font-family: Palatino, "Palatino Linotype", serif; 
-	font-style: italic;
-	font-size: 2.1em;
+	font-family: Baskerville, 'Baskerville old face', 'Times New Roman', serif;
+	font-size: 2.5em;
 	color: #4D4D4D;
-	width: 33em;
+	-webkit-font-smoothing: antialiased;
 }
 
 @mixin thirdly_header {
-	font-family: Palatino, "Palatino Linotype", serif;
+	font-family: Baskerville, 'Baskerville old face', 'Times New Roman', serif;
 	text-transform: uppercase;
 	font-size: 1.4em;
 	letter-spacing: 0.1em;
 	color: #4D4D4D;
-	text-shadow: 1px 1px 0 white;
+	-webkit-font-smoothing: antialiased;
 }
 
 @mixin body_copy { 
-	font-family: Palatino, "Palatino Linotype", serif;
+	font-family: Baskerville, 'Baskerville old face', 'Times New Roman', serif;
 	font-size: 1.6em;
 	width: 33em;
-	color: #666;
+	color: #444;
+	-webkit-font-smoothing: antialiased;
 }
