Work up new design direction

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,13 +14,4 @@
         %a{:href => "/about"} Ben Schwarz
         2009—  
       %nav
-        %ul
-          %li
-            %a{:href => "/"} Home
-          %li
-            %a{:href => "/about", :rel => "author"} About
-          %li
-            %a{:href => "http://twitter.com/benschwarz", :rel => "external"} Twitter
-          %li
-            %a{:href => "http://github.com/benschwarz", :rel => "external"} Github
-  %script{:src => "/javascripts/modernizr.js"}
+        %a{:href => "http://twitter.com/benschwarz", :rel => "external"} Follow me on twitter
