--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -8,40 +8,55 @@
   %p Ben Schwarz is a well known Melbourne based developer who funds his love of good food (at home) and sake (in bars) by designing sophisticated web applications using standards based technology. More than anything else, he is driven by a maniacal desire to produce not only elegant code, but also beautiful software in the hands of its&nbsp;users.
 
 %section#articles
-  %h1 An archive of articles
+  %h1 
+    %span An archive of articles
   
   %article
-    %h1 Moving towards readable specs
-    %p How design could save the W3C
+    %a{href: "/"}
+      %h1 Moving towards readable specs
+      %h2 How design could save the W3C.
   %article
-    %h1 Moving towards readable specs
-    %p How design could save the W3C
+    %a{href: "/"}
+      %h1 Stop writing plans
+      %h2 We all have great ideas, but to be fair to our craft, sometimes we have to forget them.
   %article
-    %h1 Moving towards readable specs
-    %p How design could save the W3C
+    %a{href: "/"}
+      %h1 Web design with grids
+      %h2 The technique that I've been using to work on page layouts.
   %article
-    %h1 Moving towards readable specs
-    %p How design could save the W3C
+    %a{href: "/"}
+      %h1 Hacking Ruby's autoload
+      %h2 How and why I overrode Kernel.autoload
 
 %section#presentations
-  %h1 Presentations
+  %h1
+    %span Presentations
   %dl
     %dt 2010
     %dd
       %dl
         %dt May
-        %dd Introducing "The hoard"
-        %dd Introducing "The hoard"
+        %dd.slides
+          %a{href: "/"} Introducing "The hoard"
+        %dd.video
+          %a{href: "/"} Introducing "The hoard"
     %dd
       %dl
         %dt April
-        %dd Introducing "The hoard"
-        %dd Introducing "The hoard"
+        %dd.slides
+          %a{href: "/"} Introducing "The hoard"
+        %dd.video
+          %a{href: "/"} Introducing "The hoard"
+        %dd.video
+          %a{href: "/"} Introducing "The hoard"
 
 %section#meta
-  %h1 Meta
-  %p.contact
-    You have a lot of options to contact me, email is good, but I can often be found at web events around the world, hit me up if you’d like to catch up.
-  %a{:href => "mailto:#{entity_encode('ben.schwarz@gmail.com')}"} E-Mail Ben
-  %p.external
-    Apart from my personal work I also operate AB+C, alongside ANTHONY KOLBER. Together we build beautiful, professional looking web applications. Got something you want to get off the ground? Talk to us.
+  %h1
+    %span Meta
+  %section#contact
+    %p
+      You have a lot of options to contact me, email is good, but I can often be found at web events around the world, hit me up if you’d like to catch up.
+    %a{:href => "mailto:#{entity_encode('ben.schwarz@gmail.com')}"} E-Mail Ben
+  %section#external
+    %p
+      Apart from my personal work I also operate AB+C, alongside ANTHONY KOLBER. Together we build beautiful, professional looking web applications. Got something you want to get off the ground? Talk to us.
