--- a/public/stylesheets/sass/typography.scss
+++ b/public/stylesheets/sass/typography.scss
@@ -15,23 +15,19 @@
 	color: #4D4D4D; 
 	line-height: 1em; 
 	font-size: 6.5em;
-	-webkit-font-smoothing: antialiased;
 }
 
 @mixin secondry_header {
 	font-family: Baskerville, 'Baskerville old face', 'Times New Roman', serif;
 	font-size: 2.5em;
 	color: #4D4D4D;
-	-webkit-font-smoothing: antialiased;
 }
 
-@mixin thirdly_header {
+@mixin thirdly_header { 
 	font-family: Baskerville, 'Baskerville old face', 'Times New Roman', serif;
-	text-transform: uppercase;
-	font-size: 1.4em;
-	letter-spacing: 0.1em;
-	color: #4D4D4D;
-	-webkit-font-smoothing: antialiased;
+	font-style: italic; 
+	font-size: 1.8em; 
+	color: #333;
 }
 
 @mixin body_copy { 
@@ -39,5 +35,4 @@
 	font-size: 1.6em;
 	width: 33em;
 	color: #444;
-	-webkit-font-smoothing: antialiased;
 }
