--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -5,28 +5,47 @@
     %img{:src => "/images/me.jpg"}
     %h2 I love minimal, functional design and development techniques, typography and all things web
 %section#bio
-  %p Ben Schwarz is a well known Melbourne based developer who funds his love of good food (at home) and sake (in bars) by designing sophisticated web applications using standards based technology. More than anything else, he is driven by a maniacal desire to produce not only elegant code, but also beautiful software in the hands of its&nbsp;users.
+  %p Ben Schwarz is a well known Melbourne based developer who funds his love of good food (at home) and sake (in bars) by designing sophisticated web applications using standards based technology. <br>More than anything else, he is driven by a maniacal desire to produce not only elegant code, but also beautiful software in the hands of its&nbsp;users.
 
 %section#articles
   %h1 
     %span An archive of articles
   
-  %article
-    %a{href: "/"}
-      %h1 Moving towards readable specs
-      %h2 How design could save the W3C.
-  %article
-    %a{href: "/"}
-      %h1 Stop writing plans
-      %h2 We all have great ideas, but to be fair to our craft, sometimes we have to forget them.
-  %article
-    %a{href: "/"}
-      %h1 Web design with grids
-      %h2 The technique that I've been using to work on page layouts.
-  %article
-    %a{href: "/"}
-      %h1 Hacking Ruby's autoload
-      %h2 How and why I overrode Kernel.autoload
+  %dl 
+    %dt 2010
+    %dd
+      %dl
+        %dt March
+        %dd
+          %article
+            %a{href: "/"}
+              %h1 Moving towards readable specs
+              %h2 How design could save the W3C.
+        %dt April
+        %dd  
+          %article
+            %a{href: "/"}
+              %h1 Stop writing plans
+              %h2 We all have great ideas, but to be fair to our craft, sometimes we have to forget them.
+          %article
+            %a{href: "/"}
+              %h1 Web design with grids
+              %h2 The technique that I've been using to work on page layouts.
+        %dt August
+        %dd
+          %article
+            %a{href: "/"}
+              %h1 Hacking Ruby's autoload
+              %h2 How and why I overrode Kernel.autoload
+    %dt 2009
+    %dd
+      %dl
+        %dt February
+        %dd
+          %article
+            %a{href: "/"}
+              %h1 Hacking Ruby's autoload
+              %h2 How and why I overrode Kernel.autoload
 
 %section#presentations
   %h1
