--- a/public/stylesheets/sass/typography.scss
+++ b/public/stylesheets/sass/typography.scss
@@ -21,6 +21,8 @@
 	font-family: Baskerville, 'Baskerville old face', 'Times New Roman', serif;
 	font-size: 2.5em;
 	color: #4D4D4D;
+	
+	.fontsmoothing & { color: #333; }
 }
 
 @mixin thirdly_header { 
